<resources>
    <string name="app_name">PiLock</string>
    <string name="server_address">PiLock Server</string>
    <string name="core_settings">Core Settings</string>
    <string name="login_label">Please login to the server:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_params">username</string>
    <string name="password_params">password</string>
    <string name="login">Login</string>
    <string name="login_text">Trying to log in...</string>
    <string name="profile_already_registered">Another device has already registered with the credentials you provided. Please login to the server via a PC and delete the previous profile object.</string>
    <string name="remember_pin">Your Personal Identification Number is noted down below. Please write it down on a safe spot, you will need it whenever you want to open the lock later.</string>
    <string name="auth_prefs">com.kerk12.pilock.AUTH</string>
    <string name="auth_token_params">authToken</string>
    <string name="profile_id_params">device_profile_id</string>
    <string name="pin_params">pin</string>
    <string name="pin_entry_label">Please enter your pin here. It can only contain 6 numerical digits.</string>
    <string name="unlock">Unlock</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="invalid_cert">Invalid Certificate</string>
    <string name="server_not_found">Server not found</string>
    <string name="access_granted">Access Granted</string>
    <string name="invalid_pin_entered">The PIN needs to be exactly 6 digits long and can contain only numeric characters.</string>
    <string name="no_server_url_supplied">Please enter a server URL.</string>
    <string name="please_enter_username_and_password">Please enter a username and a password.</string>
    <string name="not_connected_to_wifi">You need to be connected via WiFi to proceed.</string>
    <string name="invalid_login">Invalid Login Credentials</string>
    <string name="change_pin_label">Please insert your old PIN and your new PIN:</string>
    <string name="pin_change_successful">PIN Changed Successfully</string>
    <string name="change_pin">Change PIN</string>
    <string name="locked">Locked...</string>
    <string name="internal_server_error">An internal server error has occurred...</string>
    <string name="no_server_url_detected">No server URL has been entered. Exiting...</string>
    <string name="http_not_supported">Plain HTTP is not supported. Please use HTTP over SSL (HTTPS).</string>
    <string name="settings_server_address_summary">The URL of the PiLock Server.</string>
    <string name="about_message">PiLock Client\nDesigned by Kyriakos Giannakis.\n\nThe app is released under the GNU GPLv3 licence.</string>
    <string name="wait_dialog_title">Authenticating</string>
    <string name="wait_dialog">Trying to authenticate...</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="heartbeat_text">Requesting Heartbeat...</string>
    <string name="version_err">Your app is outdated or the server software you are currently using is outdated. Please update both to the latest version.</string>
    <string name="cert_file_not_exists">Certificate not found on root of internal storage/sdcard.</string>
    <string name="passwordless_unlock">Enable PINless unlocks.</string>
    <string name="passwordless_warning">WARNING: Enabling PINless unlocks can be insecure in case your phone gets stolen.</string>
    <string name="change_pin_not_allowed">PIN Changing not allowed: PINless unlocks have been enabled.</string>
    <string name="passwordless_pin_entry_header">Click the UNLOCK button to send an unlock signal.</string>
    <string name="synced_successfully">Synced with Android Wear successfully!</string>
    <string name="connected_to_wear">Connected with an Android Wear device!</string>
    <string name="no_nearby_nodes">No nearby wear devices were detected.</string>
    <string name="not_connected_to_wear">No connected Android Wear devices were detected.</string>
    <string name="changing_pin">Changing PIN</string>
    <string name="please_wait">Please Wait...</string>
</resources>
